# sell_manager_CLI

./: .gitignore  PRD_sell_manager_CLI.md  README.md  clean-and-export.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run_sellmanagement.ps1  run_sellmanagement.sh  tmp_debug.out  tmp_debug.py  tmp_signals_check.out  tmp_signals_check.py
.github/workflows/: ci.yml
config/: assigned_ma.csv  assigned_ma.example.csv  positions.txt
docs/: PRD_sell_manager_CLI.md  Public_prep_AUDIT_REPORT.md  gui.plan.md  refactor_audit.md  symbols_db_developer.md
docs/00-project/: 00-readme.md  01-charter.md
docs/01-architecture/: 00-architecture-overview.md
docs/02-sessions/: 00-session-tracker.md
docs/03-tasks/: 00-task-tracker.md
docs/04-bugs/: 00-bug-tracker.md
docs/05-reference/: 00-reference-index.md  (+3 more)
scripts/: __init__.py  clean_export.py  compare_versions.py
tests/: conftest.py  test_aggregator.py  test_alerts.py  test_assignment_integration.py  test_backfill.py  test_brokers.py  test_dashboard.py  test_downloader.py  test_gui_ib_mock.py  test_gui_smoke.py  test_ib_client.py  test_ib_client_errors.py  test_ib_client_finegrain.py  test_indicators.py  test_indicators_hourly.py  test_ma_presets.py  test_minute_snapshot_integration.py  test_order_manager_unit.py  test_orders.py  test_orders_edgecases.py  test_orders_ext.py  test_pipeline_runner.py  test_regression_signals.py  test_settings_store.py  test_signals.py
tmp/: README.md
tools/: build_gui.bat  check_widgets.py  extract_compare_serv.py  extract_compare_serv_ts.py  pack_gui.sh
(+73 files in other folders)
