[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sellmanagement"
version = "0.0.1"
description = "CLI for monitoring IBKR positions and preparing sell orders when positions cross below assigned moving averages."
authors = [ { name = "" } ]
dependencies = [
    "ib_insync>=0.9.86",
    "pandas>=1.5",
    "numpy>=1.24",
]
[project.scripts]
sellmanagement = "sellmanagement.__main__:main"

# Runtime Python compatibility
requires-python = ">=3.10"

[project.optional-dependencies]
gui = [
    "qtpy>=2.3",
    "PySide6>=6.5",
    "qasync>=0.25",
    "pyinstaller>=5.1",
]
